# wlroots

./: meson.build
backend/: backend.c  meson.build
backend/multi/: backend.c
backend/wayland/: backend.c  output.c  registry.c  wl_seat.c
backend/x11/: backend.c  input_device.c  meson.build  output.c
examples/: meson.build  simple.c
include/backend/: wayland.h  x11.h
include/render/: gles2.h
include/wlr/: backend.h
include/wlr/backend/: interface.h  wayland.h  x11.h
include/wlr/interfaces/: wlr_output.h
include/wlr/render/: allocator.h  egl.h  gles2.h  interface.h  wlr_renderer.h  wlr_swapchain.h
include/wlr/render/allocator/: gbm.h  interface.h
include/wlr/types/: wlr_output.h
include/wlr/util/: wlr_format_set.h
protocol/: meson.build
render/: egl.c  hack.c  meson.build  wlr_allocator.c  wlr_renderer.c  wlr_swapchain.c
render/allocator/: gbm.c
render/gles2/: renderer.c  texture.c
types/: wlr_output.c
util/: meson.build  wlr_format_set.c
